{
    "name": "MobileInputActions",
    "maps": [
        {
            "name": "ActionMap",
            "id": "c736d28f-abfa-4870-a11e-2f45d74ea5d9",
            "actions": [
                {
                    "name": "Touch0Delta",
                    "type": "Value",
                    "id": "87dc9e45-0eed-4680-9160-55b681328a8b",
                    "expectedControlType": "Delta",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Touch0Position",
                    "type": "Value",
                    "id": "6b2f6146-5558-4f4b-aa0a-112c5b287cb3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Touch1Delta",
                    "type": "Value",
                    "id": "369a7080-05c1-4117-8edb-d71b2da5b0df",
                    "expectedControlType": "Delta",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Touch1Position",
                    "type": "Value",
                    "id": "f9c2903a-9502-40d6-a628-113153f8e273",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TapPosition",
                    "type": "Value",
                    "id": "7328c5c5-e80b-4963-a321-5b085094a3e6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Tap",
                    "type": "Button",
                    "id": "14eef099-6079-4110-903b-a79612c6d189",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UIButton",
                    "type": "Button",
                    "id": "fc75239b-ea2e-418e-9052-b555216f7b5e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "91295c3a-5add-40f8-8e91-f8ceaff5f89a",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TapPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b12acd4a-7ca3-4389-84ea-38158a5843e9",
                    "path": "<Touchscreen>/primaryTouch/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch0Delta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "88277310-7e9e-4487-bc6f-251bf1f6fb68",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UIButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "830a3c43-ab0f-4d04-b402-b5bca4eeca9d",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "94376898-02b7-49c0-8eff-dbb993d45ce5",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch0Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e37392df-2c5a-462b-b91a-8562c0280874",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch1Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "794f30f9-e653-45be-b5c4-c7588befb62d",
                    "path": "<Touchscreen>/touch1/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch1Delta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}